@@ -3,10 +3,6 @@
     <package name="reahl"/>
   </namespaces>
 
-  <deps purpose="build">
-    <egg name="reahl-bzrsupport"/>
-  </deps>
-
   <deps purpose="test">
     <thirdpartyegg name="nose"/>
   </deps>
